--- a/package.json
+++ b/package.json
@@ -13,15 +13,28 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"json-server --midafter --watch db.json -p 3001\"",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "testMatch": [
+      "**/?(*.)+(spec|test).[jt]s?(x)"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -46,8 +59,10 @@
     "concurrently": "^8.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-enzyme": "^7.1.2",
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.3",
+    "moxios": "^0.4.0"
   }
 }
